--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -10,6 +10,15 @@ html
   body
   .app-title.navbar.navbar-expand-md.navbar-light.bg-light
    .navbar-brand Taskleaf
+
+   ul.navbar-nav.ml-auto
+    - if currnet_user
+      li.navbar= link_to 'タスク一覧', tasks_path, class: 'nav-link'
+      - if currnet_user.admin?
+      li.navbar= link_to 'ユーザー一覧', admin_users_path, class: 'nav-link'
+      li.navbar= link_to 'ログアウト', logout_path, method: delete, class: 'nav-link'
+    -else
+      li.navbar= link_to 'ログイン', login_path, class: 'nav-link'
   .container
    - if flash.notice.present?
     .alert.alert-success= flash.notice
